<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Trip Planner</string>
    <string name="hello">Hello World!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title">TRIP PLANNER</string>
    <string name="mytrips">My trips</string>
    <string name="myacc">My account</string>
    <string name="general"><u>General</u></string>
    <string name="account">ACCOUNT HERE</string>
    <string name="opentrips"><b>Open trips</b></string>
    <string name="chatChat">Chat!</string>
    <string name="chatUpdate">Update</string>
    <string name="ParticipatingTrips">Participating Trips</string>
    <string name="equipment">Equipment</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="dateTitle">Date</string>
    <string name="location">Location</string>
    <string name="message">Message</string>
    <string name="start">START!</string>
    <string name="nextStop">Next stop</string>
    <string name="vraag"><u>Vraag</u></string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="clear">x</string>
</resources>
