<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:id="@+id/DateTitle"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/dateTitle"
            android:textSize="20dp"
            android:background="#222222"
            />
    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/startDate"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/startDate"
            android:layout_below="@id/DateTitle"
            />

        <TextView
                android:id="@+id/startDateText"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/DateTitle"
                android:layout_alignBaseline="@id/startDate"
                android:layout_alignParentRight="true"
                />

        <TextView
                android:id="@+id/endDate"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/endDate"
                android:layout_below="@id/startDate"
                />
        <TextView
                android:id="@+id/endDateText"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/DateTitle"
                android:layout_alignBaseline="@id/endDate"
                android:layout_alignParentRight="true"
                />
    </RelativeLayout>

    <TextView
            android:id="@+id/locationTitle"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/location"
            android:textSize="20dp"
            android:background="#222222"
            />

    <TextView
            android:id="@+id/locationText"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />

    <TextView
            android:id="@+id/equipmentTitle"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/equipment"
            android:textSize="20dp"
            android:background="#222222"
            />

    <TextView
            android:id="@+id/equipmentText"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
    <Button
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_margin="20dp"
            android:text="@string/start"
            android:id="@+id/startTrip"
            android:textStyle="bold"
            android:background="@drawable/button_green"
            android:layout_alignParentBottom="true"
            />
      </RelativeLayout>
</LinearLayout>