<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:background="@drawable/backgroundlogin">


    <!-- Login Title -->
    <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="95dp"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true"/>

    <ImageView
            android:id="@+id/imageView1"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            android:src="@drawable/compass_login"
            android:textAlignment="center"
            android:layout_margin="5dp"
            />



    <Button
            android:id="@+id/main"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:text="Main"
            android:textColor="#FFFFFF"
            android:layout_margin="10dp"
            android:background="@drawable/button_blue"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"/>
        <Button
                android:id="@+id/login"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:layout_margin="10dp"
                android:background="@drawable/button_blue"
                android:layout_gravity="center"
                android:layout_above="@id/main"/>

    <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_above="@id/login"
            />
    <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/username"
            android:layout_above="@id/password"
            >


        <requestFocus />
    </EditText>

</RelativeLayout>